--- a/index.html
+++ b/index.html
@@ -58,17 +58,19 @@
   </header>
   <main class="main">
     <section class="hero">
-      <h1 class="hero__title">Кофе, созданный с любовью</h1>
-      <p class="hero__subtitle">Свежайшая обжарка, отборные зерна, безупречный вкус</p>
-      <a 
-        class="hero__link"
-        href="#menu" 
-        title="Перейти к разделу Меню"
-        aria-label="Меню"
-        rel="bookmark" 
-      >
-        Попробовать
-      </a>
+      <div class="hero__wrapper container">
+        <h1 class="hero__title">Кофе, созданный с любовью</h1>
+        <p class="hero__subtitle">Свежайшая обжарка, отборные зерна, безупречный вкус</p>
+        <a 
+          class="hero__link"
+          href="#menu" 
+          title="Перейти к разделу Меню"
+          aria-label="Меню"
+          rel="bookmark" 
+        >
+          Попробовать
+        </a>  
+      </div>
       <div class="hero__overlay"></div>
     </section>
     <section class="about-us container" id="about-us">
@@ -88,11 +90,11 @@
         </p>
       </div>
     </section>
-    <section class="menu container" id="menu">
+    <section class="menu" id="menu">
       <h2 class="menu__title">Меню</h2>
       <blockquote class="about-us__blockquote blockquote h3">«Откройте для себя идеальный вкус»</blockquote>
       <div class="menu__wrapper">
-        <ul class="menu__list">
+        <ul class="menu__list container">
           <li class="menu__item">
             <img 
               class="menu__item__image" 
@@ -164,71 +166,72 @@
     </section>
   </main>
   <footer class="footer" id="contacts">
-    <a 
-      href="/" 
-      title="Логотип CoffeeTime"
-      aria-label="Перейти на главную страницу"
-      rel="noopener"
-      class="footer__logo"
-    >
-      <img src="./images/footer/CoffeeTimeLogoLight.svg" alt="Логотип">
-    </a>
-    <div class="footer__contacts">
+    <div class="footer__wrapper container">
       <a 
-        class="footer__contacts__email" 
-        href="mailto:info@example.com" 
-        title="Написать нам письмо"
+        href="/" 
+        title="Логотип CoffeeTime"
+        aria-label="Перейти на главную страницу"
         rel="noopener"
-        aria-label="Написать на почту компании"
+        class="footer__logo"
       >
-        Напишите нам: example@mail.ru
+        <img src="./images/footer/CoffeeTimeLogoLight.svg" alt="Логотип">
       </a>
-      <ul class="footer__contacts__soc1als__list">
-        <li class="footer__contacts__soc1als__item">
-          <a 
-            href="https://wa.me/79999999999" 
-            title="Написать в WhatsApp"
-            aria-label="WhatsApp"
-            target="_blank"
-            rel="noopener"
-          >
-            <svg xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 24 24" width="50px" height="50px"><title>Whatsapp</title><path d="M19.077,4.928C17.191,3.041,14.683,2.001,12.011,2c-5.506,0-9.987,4.479-9.989,9.985 c-0.001,1.76,0.459,3.478,1.333,4.992L2,22l5.233-1.237c1.459,0.796,3.101,1.215,4.773,1.216h0.004 c5.505,0,9.986-4.48,9.989-9.985C22.001,9.325,20.963,6.816,19.077,4.928z M16.898,15.554c-0.208,0.583-1.227,1.145-1.685,1.186 c-0.458,0.042-0.887,0.207-2.995-0.624c-2.537-1-4.139-3.601-4.263-3.767c-0.125-0.167-1.019-1.353-1.019-2.581 S7.581,7.936,7.81,7.687c0.229-0.25,0.499-0.312,0.666-0.312c0.166,0,0.333,0,0.478,0.006c0.178,0.007,0.375,0.016,0.562,0.431 c0.222,0.494,0.707,1.728,0.769,1.853s0.104,0.271,0.021,0.437s-0.125,0.27-0.249,0.416c-0.125,0.146-0.262,0.325-0.374,0.437 c-0.125,0.124-0.255,0.26-0.11,0.509c0.146,0.25,0.646,1.067,1.388,1.728c0.954,0.85,1.757,1.113,2.007,1.239 c0.25,0.125,0.395,0.104,0.541-0.063c0.146-0.166,0.624-0.728,0.79-0.978s0.333-0.208,0.562-0.125s1.456,0.687,1.705,0.812 c0.25,0.125,0.416,0.187,0.478,0.291C17.106,14.471,17.106,14.971,16.898,15.554z"/></svg>
-          </a>
-        </li>
-        <li class="footer__contacts__soc1als__item">
-          <a 
-            href="https://t.me/username" 
-            title="Написать в Telegram"
-            aria-label="Telegram"
-            target="_blank"
-            rel="noopener"
-          >
-            <svg xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 24 24" width="50px" height="50px"><title>Telegram</title><path d="M 20.302734 2.984375 C 20.013769 2.996945 19.748583 3.080055 19.515625 3.171875 C 19.300407 3.256634 18.52754 3.5814726 17.296875 4.0976562 C 16.06621 4.61384 14.435476 5.2982348 12.697266 6.0292969 C 9.2208449 7.4914211 5.314238 9.1361259 3.3125 9.9785156 C 3.243759 10.007156 2.9645852 10.092621 2.65625 10.328125 C 2.3471996 10.564176 2.0039062 11.076462 2.0039062 11.636719 C 2.0039062 12.088671 2.2295201 12.548966 2.5019531 12.8125 C 2.7743861 13.076034 3.0504903 13.199244 3.28125 13.291016 L 3.28125 13.289062 C 4.0612776 13.599827 6.3906939 14.531938 6.9453125 14.753906 C 7.1420423 15.343433 7.9865895 17.867278 8.1875 18.501953 L 8.1855469 18.501953 C 8.3275588 18.951162 8.4659791 19.243913 8.6582031 19.488281 C 8.7543151 19.610465 8.8690398 19.721184 9.0097656 19.808594 C 9.0637596 19.842134 9.1235454 19.868148 9.1835938 19.892578 C 9.191962 19.896131 9.2005867 19.897012 9.2089844 19.900391 L 9.1855469 19.894531 C 9.2029579 19.901531 9.2185841 19.911859 9.2363281 19.917969 C 9.2652427 19.927926 9.2852873 19.927599 9.3242188 19.935547 C 9.4612233 19.977694 9.5979794 20.005859 9.7246094 20.005859 C 10.26822 20.005859 10.601562 19.710937 10.601562 19.710938 L 10.623047 19.695312 L 12.970703 17.708984 L 15.845703 20.369141 C 15.898217 20.443289 16.309604 21 17.261719 21 C 17.829844 21 18.279025 20.718791 18.566406 20.423828 C 18.853787 20.128866 19.032804 19.82706 19.113281 19.417969 L 19.115234 19.416016 C 19.179414 19.085834 21.931641 5.265625 21.931641 5.265625 L 21.925781 5.2890625 C 22.011441 4.9067171 22.036735 4.5369631 21.935547 4.1601562 C 21.834358 3.7833495 21.561271 3.4156252 21.232422 3.2226562 C 20.903572 3.0296874 20.591699 2.9718046 20.302734 2.984375 z M 19.908203 5.1738281 C 19.799442 5.7198576 17.33401 18.105877 17.181641 18.882812 L 13.029297 15.041016 L 10.222656 17.414062 L 11 14.375 C 11 14.375 16.362547 8.9468594 16.685547 8.6308594 C 16.945547 8.3778594 17 8.2891719 17 8.2011719 C 17 8.0841719 16.939781 8 16.800781 8 C 16.675781 8 16.506016 8.1197812 16.416016 8.1757812 C 15.272368 8.8887854 10.401283 11.664685 8.0058594 13.027344 C 7.8617016 12.96954 5.6973962 12.100458 4.53125 11.634766 C 6.6055146 10.76177 10.161156 9.2658083 13.472656 7.8730469 C 15.210571 7.142109 16.840822 6.4570977 18.070312 5.9414062 C 19.108158 5.5060977 19.649538 5.2807035 19.908203 5.1738281 z M 17.152344 19.025391 C 17.152344 19.025391 17.154297 19.025391 17.154297 19.025391 C 17.154252 19.025621 17.152444 19.03095 17.152344 19.03125 C 17.153615 19.024789 17.15139 19.03045 17.152344 19.025391 z"/></svg>
-          </a>
-        </li>
-        <li class="footer__contacts__soc1als__item">
-          <a 
-            href="mailto:info@example.com" 
-            title="Написать нам"
-            aria-label="Email"
-            target="_blank"
-            rel="noopener"
-          >
-            <svg data-name="1-Email" xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 32 32"><title>Email</title><path d="M29,4H3A3,3,0,0,0,0,7V25a3,3,0,0,0,3,3H29a3,3,0,0,0,3-3V7A3,3,0,0,0,29,4Zm-.72,2L16,14.77,3.72,6ZM30,25a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V7.23l13.42,9.58a1,1,0,0,0,1.16,0L30,7.23Z"/></svg>
-          </a>
-        </li>
-      </ul>
-      <a 
-        class="footer__contacts__phone" 
-        href="tel:+79999999999" 
-        title="Позвонить нам"
-        rel="noopener"
-        aria-label="Позвонить в компанию"
-      >
-        Позвоните нам: +7 (999) 999-99-99
-      </a>
+      <div class="footer__contacts">
+        <a 
+          class="footer__contacts__email" 
+          href="mailto:info@example.com" 
+          title="Написать нам письмо"
+          rel="noopener"
+          aria-label="Написать на почту компании"
+        >
+          Напишите нам: example@mail.ru
+        </a>
+        <ul class="footer__contacts__soc1als__list">
+          <li class="footer__contacts__soc1als__item">
+            <a 
+              href="https://wa.me/79999999999" 
+              title="Написать в WhatsApp"
+              aria-label="WhatsApp"
+              target="_blank"
+              rel="noopener"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 24 24" width="50px" height="50px"><title>Whatsapp</title><path d="M19.077,4.928C17.191,3.041,14.683,2.001,12.011,2c-5.506,0-9.987,4.479-9.989,9.985 c-0.001,1.76,0.459,3.478,1.333,4.992L2,22l5.233-1.237c1.459,0.796,3.101,1.215,4.773,1.216h0.004 c5.505,0,9.986-4.48,9.989-9.985C22.001,9.325,20.963,6.816,19.077,4.928z M16.898,15.554c-0.208,0.583-1.227,1.145-1.685,1.186 c-0.458,0.042-0.887,0.207-2.995-0.624c-2.537-1-4.139-3.601-4.263-3.767c-0.125-0.167-1.019-1.353-1.019-2.581 S7.581,7.936,7.81,7.687c0.229-0.25,0.499-0.312,0.666-0.312c0.166,0,0.333,0,0.478,0.006c0.178,0.007,0.375,0.016,0.562,0.431 c0.222,0.494,0.707,1.728,0.769,1.853s0.104,0.271,0.021,0.437s-0.125,0.27-0.249,0.416c-0.125,0.146-0.262,0.325-0.374,0.437 c-0.125,0.124-0.255,0.26-0.11,0.509c0.146,0.25,0.646,1.067,1.388,1.728c0.954,0.85,1.757,1.113,2.007,1.239 c0.25,0.125,0.395,0.104,0.541-0.063c0.146-0.166,0.624-0.728,0.79-0.978s0.333-0.208,0.562-0.125s1.456,0.687,1.705,0.812 c0.25,0.125,0.416,0.187,0.478,0.291C17.106,14.471,17.106,14.971,16.898,15.554z"/></svg>
+            </a>
+          </li>
+          <li class="footer__contacts__soc1als__item">
+            <a 
+              href="https://t.me/username" 
+              title="Написать в Telegram"
+              aria-label="Telegram"
+              target="_blank"
+              rel="noopener"
+            >
+              <svg xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 24 24" width="50px" height="50px"><title>Telegram</title><path d="M 20.302734 2.984375 C 20.013769 2.996945 19.748583 3.080055 19.515625 3.171875 C 19.300407 3.256634 18.52754 3.5814726 17.296875 4.0976562 C 16.06621 4.61384 14.435476 5.2982348 12.697266 6.0292969 C 9.2208449 7.4914211 5.314238 9.1361259 3.3125 9.9785156 C 3.243759 10.007156 2.9645852 10.092621 2.65625 10.328125 C 2.3471996 10.564176 2.0039062 11.076462 2.0039062 11.636719 C 2.0039062 12.088671 2.2295201 12.548966 2.5019531 12.8125 C 2.7743861 13.076034 3.0504903 13.199244 3.28125 13.291016 L 3.28125 13.289062 C 4.0612776 13.599827 6.3906939 14.531938 6.9453125 14.753906 C 7.1420423 15.343433 7.9865895 17.867278 8.1875 18.501953 L 8.1855469 18.501953 C 8.3275588 18.951162 8.4659791 19.243913 8.6582031 19.488281 C 8.7543151 19.610465 8.8690398 19.721184 9.0097656 19.808594 C 9.0637596 19.842134 9.1235454 19.868148 9.1835938 19.892578 C 9.191962 19.896131 9.2005867 19.897012 9.2089844 19.900391 L 9.1855469 19.894531 C 9.2029579 19.901531 9.2185841 19.911859 9.2363281 19.917969 C 9.2652427 19.927926 9.2852873 19.927599 9.3242188 19.935547 C 9.4612233 19.977694 9.5979794 20.005859 9.7246094 20.005859 C 10.26822 20.005859 10.601562 19.710937 10.601562 19.710938 L 10.623047 19.695312 L 12.970703 17.708984 L 15.845703 20.369141 C 15.898217 20.443289 16.309604 21 17.261719 21 C 17.829844 21 18.279025 20.718791 18.566406 20.423828 C 18.853787 20.128866 19.032804 19.82706 19.113281 19.417969 L 19.115234 19.416016 C 19.179414 19.085834 21.931641 5.265625 21.931641 5.265625 L 21.925781 5.2890625 C 22.011441 4.9067171 22.036735 4.5369631 21.935547 4.1601562 C 21.834358 3.7833495 21.561271 3.4156252 21.232422 3.2226562 C 20.903572 3.0296874 20.591699 2.9718046 20.302734 2.984375 z M 19.908203 5.1738281 C 19.799442 5.7198576 17.33401 18.105877 17.181641 18.882812 L 13.029297 15.041016 L 10.222656 17.414062 L 11 14.375 C 11 14.375 16.362547 8.9468594 16.685547 8.6308594 C 16.945547 8.3778594 17 8.2891719 17 8.2011719 C 17 8.0841719 16.939781 8 16.800781 8 C 16.675781 8 16.506016 8.1197812 16.416016 8.1757812 C 15.272368 8.8887854 10.401283 11.664685 8.0058594 13.027344 C 7.8617016 12.96954 5.6973962 12.100458 4.53125 11.634766 C 6.6055146 10.76177 10.161156 9.2658083 13.472656 7.8730469 C 15.210571 7.142109 16.840822 6.4570977 18.070312 5.9414062 C 19.108158 5.5060977 19.649538 5.2807035 19.908203 5.1738281 z M 17.152344 19.025391 C 17.152344 19.025391 17.154297 19.025391 17.154297 19.025391 C 17.154252 19.025621 17.152444 19.03095 17.152344 19.03125 C 17.153615 19.024789 17.15139 19.03045 17.152344 19.025391 z"/></svg>
+            </a>
+          </li>
+          <li class="footer__contacts__soc1als__item">
+            <a 
+              href="mailto:info@example.com" 
+              title="Написать нам"
+              aria-label="Email"
+              target="_blank"
+              rel="noopener"
+            >
+              <svg data-name="1-Email" xmlns="http://www.w3.org/2000/svg" role="link" viewBox="0 0 32 32"><title>Email</title><path d="M29,4H3A3,3,0,0,0,0,7V25a3,3,0,0,0,3,3H29a3,3,0,0,0,3-3V7A3,3,0,0,0,29,4Zm-.72,2L16,14.77,3.72,6ZM30,25a1,1,0,0,1-1,1H3a1,1,0,0,1-1-1V7.23l13.42,9.58a1,1,0,0,0,1.16,0L30,7.23Z"/></svg>
+            </a>
+          </li>
+        </ul>
+        <a 
+          class="footer__contacts__phone" 
+          href="tel:+79999999999" 
+          title="Позвонить нам"
+          rel="noopener"
+          aria-label="Позвонить в компанию"
+        >
+          Позвоните нам: +7 (999) 999-99-99
+        </a>
+      </div>
     </div>
-    
   </footer>
 </body>
 </html>
